# -elsovedes

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Color.hpp  Matrix.cpp  Matrix.hpp  Point.cpp  Point.hpp  Triangle.cpp  Triangle.hpp  main.cpp
